--- a/full-learning-react-vite/package.json
+++ b/full-learning-react-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "second-vite-test",
+  "name": "full-learning-react-vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
